--- a/web/templates/html/home.html
+++ b/web/templates/html/home.html
@@ -1,6 +1,35 @@
 {% extends "html/base.html" %}
-{% load crispy_forms_tags %} 
+{% load crispy_forms_tags %}
+{% load index %}
 
 {% block content %}
-    <h1>Hello</h1>
+
+<div class="d-flex justify-content-center" style="position: absolute; height: 100%; width: 100%; overflow-y: scroll;">
+    <div class="row justify-content-center">
+        <div class="col-auto">
+            <table id="myTable" class="table table-striped table-bordered" style="border: 1px solid black;" data-page-length='7'>
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Date</th>
+                        <th scope="col">Work in</th>
+                        <th scope="col">Work out</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for day in days_in_month %}
+                    <tr class="{{ row_classes|index:forloop.counter0 }}"
+                        style="line-height: 12px; min-height: 12px; height: 12px;">
+                        <th scope="row">{{ forloop.counter }}</th>
+                        {% for key, value in day.items %}
+                        <td>{{value}}</td>
+                        {% endfor %}
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
 {% endblock content %}
